fixed cropping of first line

--- a/public/css/main.styl
+++ b/public/css/main.styl
@@ -141,7 +141,7 @@ body
 
 #content
   border solid 1px #000
-  padding 35px 25px
+  padding 0px 25px 35px
   height 600px
   position relative
   transition background-color 0.1s
